# ValaFFmpeg

./: .gitmodules  README.md  meson.build
src/: application.vala
vapi/: libavcodec.vapi  libavformat.vapi  libavutil.vapi  libswresample.vapi
